[package]
name = "mux"
version = "0.1.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "mux"
path = "src/lib.rs"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[[bin]]
name = "client"
path = "src/main.rs"
