[package]
name = "mux"
version = "0.1.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mio = "0.6.16"
log = "0.4.0"
env_logger = "0.6.1"

[lib]
name = "mux"
path = "src/lib.rs"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[[bin]]
name = "client"
path = "src/main.rs"
